# KC868_RUST

./: .gitignore  Cargo.toml  FERRIC Landing.html  partitions.csv  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.local.json
src/: bsp.rs  button.rs  dashboard.html  display.rs  ha_discovery.rs  hw_watchdog.rs  inputs.rs  main.rs  max31865.rs  mqtt.rs  ota.rs  pcf8574.rs  pt100.rs  relays.rs  safety.rs  temperature.rs  watchdog.rs  webserver.rs  wifi.rs
tests/: unit_tests.rs
tools/: ota.ps1
